@@ -208,6 +208,9 @@ PerlSetVar AuthCookieDebug 0
 	PerlHandler EBox::Auth->login
 </Files>
 
+PerlChildInitHandler EBox::dbusInit
+PassEnv DBUS_SESSION_BUS_ADDRESS
+ 
 <Directory @CGIPATH@>
    <IfModule mod_ssl.c>
 	   SSLOptions +StdEnvVars
