@@ -11,6 +11,8 @@
 	+ Bugfix. Create redirection URLs using client headers and guessing checking
 	  the protocol (HTTP or HTTPS)
 	+ Add spinner gif to modalbox window
+	+ Assure that a dbus-daemon is running every time a new eBox
+	session is started because gconfd requirement
 0.11.102
 	+ Added `override_user_modification` configuration parameter to
 	avoid user modification checkings and override them without asking
