@@ -14,6 +14,10 @@
 	+ Disable keepalive in eBox apache
 	+ Do not run a startup script in eBox apache
 	+ Set default purge time for logs stored in eBox db to 1 week
+	+ Added `PerlChildInitHandler` to ensure a dbus-daemon is running
+	when a new eBox session is started
+	+ Pass DBUS_SESSION_BUS_ADDRESS environment variable in Apache to
+	children processes
 0.11.103
 	+ Modify EBox::Types::HasMany to create directory based on its row 
 	+ Add _setRelationship method to set up relationships between models
